# z-core

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PLAN.md  PROGRESS.md  README.md  bench.py
.github/workflows/: ci.yml
crates/z180-cli/: Cargo.toml  README.md
crates/z180-cli/src/: dis.rs  main.rs  run.rs  sst.rs  zex.rs
crates/z180-cli/src/sst/: policy.rs
crates/z180-cli/tests/: dis_cli.rs  run_cli.rs
crates/z180-cli/tests/fixtures/: dis_every_mnemonic.golden
crates/z180-core/: Cargo.toml  README.md
crates/z180-core/src/: disassembler.rs  ioregs.rs  lib.rs  memory.rs  optable.rs  registers.rs
crates/z180-py/: Cargo.toml  README.md  pyproject.toml
crates/z180-py/python/z180/: __init__.py  compat.py
crates/z180-py/src/: lib.rs
crates/z180-py/tests/: test_api.py  test_compat.py
crates/z180-wasm/: Cargo.toml  README.md
crates/z180-wasm/demo/: demo.js  index.html
crates/z180-wasm/src/: lib.rs
crates/z180-wasm/tests/: fibonacci.asm  node-smoke.cjs
crates/z180-wasm/types/: refinements.d.ts  tsconfig.json  typecheck.ts
docs/: ARCHITECTURE.md  qns-migration.md  timing-notes.md  verification-log.md
reviews/2026-07-22/: opus-4.8.md
tests/z180-sst/: ed00.json  ed01.json  ed04.json  ed08.json  ed09.json  ed0c.json  ed10.json  ed11.json  ed14.json  ed18.json  ed19.json  ed1c.json  ed20.json  ed21.json  ed24.json  ed28.json  ed29.json  ed2c.json  ed30.json  ed34.json  ed38.json  ed39.json  ed3c.json  ed4c.json  ed5c.json  ed64.json  ed6c.json  ed74.json  ed76.json  ed7c.json  ed83.json  ed8b.json  ed93.json  ed9b.json  mmu.json  trap.json
tools/reference/: conftest.py  generate.py  pyproject.toml  spec.py  strategies.py  test_differential.py  test_reference.py
tools/reference/.hypothesis/: README.md
