[package]
name = "z180-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1.1.3", default-features = false, features = ["parse", "serde"] }
z180-core = { path = "../z180-core" }
