[project]
name = "z180-reference"
version = "0.0.0"
description = "Independent UM0050-derived Z180 reference transitions"
requires-python = ">=3.13,<3.14"
dependencies = [
    "hypothesis>=6.136,<7",
    "pytest>=9.0.3,<10",
    "z180",
]

[tool.uv.sources]
z180 = { path = "../../crates/z180-py" }

[tool.pytest.ini_options]
testpaths = ["."]
